--- a/src/web/templates/progress.html
+++ b/src/web/templates/progress.html
@@ -8,6 +8,9 @@ Prioritized Grammar Evaluation
   streamId = "{{streamId}}";
 </script>
 <script src="/static/js/progress.js"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<link rel="stylesheet" href="/static/css/progress.css">
 {% endblock %}
 
 {% block content %}
